# iterator_facade

./: .clang-format  .clang-tidy  .cookietemple.yml  .gitignore  .prettierignore  .readthedocs.yml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Dockerfile  README.rst  codecov.yaml  cookietemple.cfg  vcpkg.json
.github/: build.yml  ci-presets.json  pull_request_template.md
.github/workflows/: build.yml  linux.yml  macos.yml  windows.yml
cmake/: CompilerWarnings.cmake  vcpkg.cmake
docs/: Makefile  authors.rst  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
docs/_static/: custom_cookietemple.css
include/iterator_facade/: iterator_facade.hpp
test/: CMakeLists.txt
test/src/: iterator.cpp
